--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: cp -r /app/build/. /frontend_static/ 
     volumes: 
       - static_volume:/frontend_static 
-  nginx: 
+  infra: 
     image: gnyssyng/foodgram_gateway 
     env_file: .env 
     depends_on:
