--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: Main foodgram Workflow
 
 on: push
 
+jobs:
+
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     if: ${{ github.ref }} == 'refs/heads/main'
