--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,12 +17,15 @@ drf-extra-fields==3.7.0
 filetype==1.2.0
 idna==3.6
 install==1.3.5
+isort==5.13.2
 itypes==1.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 oauthlib==3.2.2
+pep8==1.7.1
 pillow==10.2.0
 psycopg2-binary==2.9.3
+pycodestyle==2.11.1
 pycparser==2.21
 PyJWT==2.8.0
 python-dotenv==1.0.1
