--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ POSTGRES_DB=foodgram
 POSTGRES_USER=foodgram_user
 POSTGRES_PASSWORD=foodgram_password
 DB_NAME=foodgram
+DEBUG=true
+ALLOWED_HOSTS=localhost 127.0.0.1
+SECRET_KEY=your_secret_key
