--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -13,6 +13,7 @@ server {
     proxy_pass http://backend:8000/admin/;
   }
   location /media/ {
+    proxy_set_header Host $http_host;
     root /var/www/foodgram;
   }
   location / {
