--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,50 +1,23 @@
 server {
-    listen 80;
-    client_max_body_size 30M;
+  listen 80;
+  index index.html;
+  server_tokens off;
+  client_max_body_size 20M;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-
-    location /api/ {
-        proxy_pass http://backend:8000/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /media/ {
-        autoindex on;
-        alias /media/;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /static/admin/ {
-        alias /backend_static/admin/;
-    }
-
-    location / {
-        root /usr/share/nginx/html/frontend/;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html/frontend/;
-        }
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  location /api/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/;
+  }
+  location /admin/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/admin/;
+  }
+  location /media/ {
+    alias /media/;
+    try_files $uri $uri/ /index.html;
+  }
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ /index.html;
+  }
 }
