--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,7 +18,7 @@ services:
       - db
     volumes: 
       - static_volume:/backend_static
-      - media:/var/www/foodgram/media
+      - media:/var/www/foodgram/media/
   frontend: 
     image: gnyssyng/foodgram_frontend 
     env_file: .env 
@@ -26,13 +26,13 @@ services:
     volumes: 
       - static_volume:/frontend_static 
   infra: 
-    image: gnyssyng/foodgram_gateway 
+    image: gnyssyng/foodgram_gateway
     restart: always
     env_file: .env 
     depends_on:
       - db
     volumes: 
       - static_volume:/staticfiles/
-      - media:/var/www/foodgram/media
+      - media:/var/www/foodgram/media/
     ports: 
-      - 9090:80 
+      - 8080:80 
