--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -19,4 +19,21 @@ server {
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
+  location /api/docs/ {
+    root /usr/share/nginx/html;
+    try_files $uri $uri/redoc.html;
+  }
+  location / {
+    root /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri /index.html;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+  }
+  error_page 404 /404.html;
+  location = /404.html {
+    root var/html/frontend/;
+  }
 }
