--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,7 @@ server {
   listen 80;
   index index.html;
   server_tokens off;
+  error_page 404 /404.html;
   client_max_body_size 20M;
 
   location /api/ {
@@ -23,8 +24,7 @@ server {
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
-  error_page 404 /404.html;
-  location = /404.html {
+  location /404.html {
     root var/html/frontend/;
   }
 }
