--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 cryptography==42.0.5
 defusedxml==0.8.0rc2
 Django==3.2.16
+django-colorfield==0.11.0
 django-extensions==3.2.3
 django-filter==23.3
 django-templated-mail==1.1.1
@@ -15,18 +16,22 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.7.0
 filetype==1.2.0
+flake8==6.0.0
+flake8-isort==6.0.0
 idna==3.6
 install==1.3.5
 isort==5.13.2
 itypes==1.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+mccabe==0.7.0
 oauthlib==3.2.2
 pep8==1.7.1
 pillow==10.2.0
 psycopg2-binary==2.9.3
-pycodestyle==2.11.1
+pycodestyle==2.10.0
 pycparser==2.21
+pyflakes==3.0.1
 PyJWT==2.8.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
