--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -14,7 +14,7 @@ server {
     proxy_pass http://backend:9000/admin/;
   }
   location /media/ {
-    root /var/www/foodgram;
+    alias /media/;
   }
   location / {
     alias /staticfiles/;
