--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -14,7 +14,9 @@ server {
     proxy_pass http://backend:9000/admin/;
   }
   location /media/ {
-    alias /media/;
+      autoindex on;
+      alias /media/;
+      try_files $uri $uri/ /index.html;
   }
   location / {
     alias /staticfiles/;
