--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -15,7 +15,7 @@ server {
   }
   location /media/ {
       autoindex on;
-      alias /media/;
+      alias /backend_static/;
       try_files $uri $uri/ /index.html;
   }
   location / {
