--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,7 +18,7 @@ services:
       - db
     volumes: 
       - static_volume:/backend_static
-      - media:/app/media/images
+      - media:/media
   frontend: 
     image: gnyssyng/foodgram_frontend 
     env_file: .env 
@@ -32,6 +32,6 @@ services:
       - db
     volumes: 
       - static_volume:/staticfiles/
-      - media:/app/media/images
+      - media:/media
     ports: 
       - 9000:80 
