--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -14,9 +14,8 @@ server {
     proxy_pass http://backend:9000/admin/;
   }
   location /media/ {
-      autoindex on;
-      alias /backend_static/;
-      try_files $uri $uri/ /index.html;
+      proxy_set_header Host $http_host;
+      alias app/media/;
   }
   location / {
     alias /staticfiles/;
