--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,31 +1,41 @@
 server {
   listen 80;
-  index index.html;
   server_tokens off;
-  error_page 404 /404.html;
-  client_max_body_size 20M;
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
+
   location /media/ {
-      alias /media/;
       proxy_set_header Host $http_host;
+      alias /media/;
+      client_max_body_size 20M;
   }
+
   location / {
-    alias /staticfiles/;
-    try_files $uri $uri/ /index.html;
+    root /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri /index.html;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
   }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /var/html/frontend/;
+    }
+
   location /api/docs/ {
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
-  location /404.html {
-    root var/html/frontend/;
-  }
+
 }
