--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -21,6 +21,7 @@ server {
     try_files $uri $uri/ /index.html;
   }
   location /api/docs/ {
+    proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
