--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,7 @@ server {
   listen 80;
   index index.html;
   server_tokens off;
+  error_page 404 /;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -25,17 +26,4 @@ server {
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
-  location / {
-    root /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri /index.html;
-    proxy_set_header        Host $host;
-    proxy_set_header        X-Real-IP $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
-  }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-    root   /var/html/frontend/;
-    }
 }
