--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -18,8 +18,8 @@ server {
       client_max_body_size 20M;
   }
   location / {
+    proxy_set_header Host $http_host;
     alias /staticfiles/;
-    try_files $uri $uri/ /index.html;
   }
   location /api/docs/ {
     proxy_set_header Host $http_host;
