--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -19,6 +19,7 @@ server {
   location /api/docs/ {
     proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
+    try_files $uri/redoc.html;
   }
   location /api/ {
     proxy_set_header Host $http_host;
