--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,20 +7,24 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
+
   location /media/ {
-      proxy_set_header Host $http_host;
-      alias /media/;
-      client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    alias /media/;
+    client_max_body_size 20M;
   }
+
   location /api/docs/ {
     proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
-    try_files $uri $uri/redoc.html;
+    try_files $uri /redoc.html;
   }
+
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
   location / {
     proxy_set_header Host $http_host;
     alias /staticfiles/;
@@ -30,4 +34,7 @@ server {
     root   /var/html/frontend/;
   }
   error_page 404 /index.html;
+  location = /redoc.html {
+    root /usr/share/nginx/html;
+  }
 }
