--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,7 +2,8 @@ version: '3'
  
 volumes: 
   pg_data_production: 
-  static_volume:
+  static:
+  frontend_static:
   media:
 
 services: 
@@ -17,21 +18,22 @@ services:
     depends_on:
       - db
     volumes: 
-      - static_volume:/backend_static
+      - static:/backend_static
       - media:/app/media/
   frontend: 
     image: gnyssyng/foodgram_frontend 
     env_file: .env 
     command: cp -r /app/build/. /frontend_static/ 
     volumes: 
-      - static_volume:/frontend_static 
+      - frontend_static:/frontend_static 
   infra: 
     image: gnyssyng/foodgram_gateway 
     env_file: .env 
     depends_on:
       - db
     volumes: 
-      - static_volume:/staticfiles/
+      - static:/backend_static/
       - media:/media/
+      - frontend_static:/frontend_static/
     ports: 
       - 9000:80 
