--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -15,19 +15,22 @@ server {
   }
 
   location /api/docs/ {
-    proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
-    try_files $uri /redoc.html;
+    try_files $uri $uri/redoc.html;
   }
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
-
   location / {
-    proxy_set_header Host $http_host;
-    alias /staticfiles/;
+    root /frontend_static/build/;
+    index  index.html index.htm;
+    try_files $uri /index.html;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
   }
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
