--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,11 @@
 server {
   listen 80;
-  index index.html;
   server_tokens off;
+  
+  location /static/ {
+    proxy_set_header Host $http_host;
+    alias /static_backend/static/;
+  }
 
   location /admin/ {
     proxy_set_header Host $http_host;
@@ -15,6 +19,7 @@ server {
   }
 
   location /api/docs/ {
+    proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
