--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,7 +4,7 @@ server {
   
   location /static/ {
     proxy_set_header Host $http_host;
-    alias /static_backend/static/;
+    alias /backend_static/static/;
   }
 
   location /admin/ {
