--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,10 +1,10 @@
 version: '3' 
  
-volumes: 
+volumes:
+  media:
   pg_data_production: 
   static:
-  frontend_static:
-  media:
+  static_frontend:
 
 services: 
   db: 
@@ -18,22 +18,23 @@ services:
     depends_on:
       - db
     volumes: 
-      - static:/app/backend_static
+      - static:/app/backend_static/
       - media:/app/media/
   frontend: 
     image: gnyssyng/foodgram_frontend 
     env_file: .env 
     command: cp -r /app/build/. /frontend_static/
     volumes: 
-      - frontend_static:/frontend_static 
+      - static_frontend:/static_frontend 
   infra: 
     image: gnyssyng/foodgram_gateway 
     env_file: .env 
     depends_on:
+      - backend
       - db
     volumes: 
       - static:/backend_static/
       - media:/media/
-      - frontend_static:/frontend_static/
+      - static_frontend:/static_frontend
     ports: 
       - 9000:80 
