--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -29,7 +29,7 @@ server {
     proxy_pass http://backend:9000/api/;
   }
   location / {
-    root /frontend_static/build/;
+    root /static_frontend/build/;
     index  index.html index.htm;
     try_files $uri /index.html;
     proxy_set_header        Host $host;
