--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,38 +1,37 @@
-version: '3' 
- 
+version: '3'
+
 volumes:
   media:
-  pg_data_production: 
+  pg_data_production:
   static:
   static_frontend:
 
-services: 
-  db: 
-    image: postgres:13.10 
-    env_file: .env 
-    volumes: 
-      - pg_data_production:/var/lib/postgresql/data 
-  backend: 
-    image: gnyssyng/foodgram_backend 
+services:
+  db:
+    image: postgres:13
     env_file: .env
-    depends_on:
-      - db
-    volumes: 
-      - static:/app/backend_static/
+    volumes:
+      - pg_data_production:/var/lib/postgresql/data
+  backend:
+    image: gnyssyng/foodgram_backend
+    env_file: .env
+    volumes:
+      - static:/app/static_backend/
       - media:/app/media/
-  frontend: 
-    image: gnyssyng/foodgram_frontend 
-    volumes: 
-      - static_frontend:/static_frontend 
-  infra: 
-    image: gnyssyng/foodgram_gateway 
-    env_file: .env 
     depends_on:
-      - backend
       - db
-    volumes: 
-      - static:/backend_static/
+  frontend:
+    image: gnyssyng/foodgram_frontend
+    volumes:
+      - static_frontend:/app/result_build/
+  infra:
+    image: gnyssyng/foodgram_gateway
+    env_file: .env
+    ports:
+      - 9000:80
+    volumes:
+      - static:/static_backend/
       - media:/media/
-      - static_frontend:/static_frontend
-    ports: 
-      - 9000:80 
+      - static_frontend:/static_frontend/
+    depends_on:
+      - backend 
