--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,21 +1,21 @@
 server {
   listen 80;
   server_tokens off;
-  
+
   location /static/ {
     proxy_set_header Host $http_host;
-    alias /backend_static/static/;
-  }
-
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/admin/;
+    alias /static_backend/static/;
   }
 
   location /media/ {
     proxy_set_header Host $http_host;
     alias /media/;
     client_max_body_size 20M;
+  }
+
+  location /admin/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/admin/;
   }
 
   location /api/docs/ {
@@ -28,6 +28,7 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
   location / {
     root /static_frontend/build/;
     index  index.html index.htm;
@@ -40,9 +41,5 @@ server {
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /var/html/frontend/;
-  }
-  error_page 404 /index.html;
-  location = /redoc.html {
-    root /usr/share/nginx/html;
   }
 }
