--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,37 +1,37 @@
-version: '3'
-
-volumes:
+version: '3' 
+ 
+volumes: 
+  pg_data_production: 
+  static_volume:
   media:
-  pg_data_production:
-  static:
-  static_frontend:
 
-services:
-  db:
-    image: postgres:13
+services: 
+  db: 
+    image: postgres:13.10 
+    env_file: .env 
+    volumes: 
+      - pg_data_production:/var/lib/postgresql/data 
+  backend: 
+    image: gnyssyng/foodgram_backend 
     env_file: .env
-    volumes:
-      - pg_data_production:/var/lib/postgresql/data
-  backend:
-    image: gnyssyng/foodgram_backend
-    env_file: .env
-    volumes:
-      - static:/app/static_backend/
-      - media:/app/media/
     depends_on:
       - db
-  frontend:
-    image: gnyssyng/foodgram_frontend
-    volumes:
-      - static_frontend:/app/result_build/
-  infra:
-    image: gnyssyng/foodgram_gateway
-    env_file: .env
-    ports:
-      - 9000:80
-    volumes:
-      - static:/static_backend/
-      - media:/media/
-      - static_frontend:/static_frontend/
+    volumes: 
+      - static_volume:/backend_static
+      - media:/app/media/
+  frontend: 
+    image: gnyssyng/foodgram_frontend 
+    env_file: .env 
+    command: cp -r /app/build/. /frontend_static/ 
+    volumes: 
+      - static_volume:/frontend_static 
+  infra: 
+    image: gnyssyng/foodgram_gateway 
+    env_file: .env 
     depends_on:
-      - backend 
+      - db
+    volumes: 
+      - static_volume:/staticfiles/
+      - media:/media/
+    ports: 
+      - 9000:80
