--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,45 +1,31 @@
 server {
   listen 80;
+  index index.html;
   server_tokens off;
-
-  location /static/ {
-    proxy_set_header Host $http_host;
-    alias /static_backend/static/;
-  }
-
-  location /media/ {
-    proxy_set_header Host $http_host;
-    alias /media/;
-    client_max_body_size 20M;
-  }
-
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/admin/;
-  }
-
-  location /api/docs/ {
-    proxy_set_header Host $http_host;
-    root /usr/share/nginx/html;
-    try_files $uri $uri/redoc.html;
-  }
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
-
-  location / {
-    root /static_frontend/build/;
-    index  index.html index.htm;
-    try_files $uri /index.html;
-    proxy_set_header        Host $host;
-    proxy_set_header        X-Real-IP $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
+  location /admin/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/admin/;
   }
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /var/html/frontend/;
+  location /media/ {
+      proxy_set_header Host $http_host;
+      alias /media/;
+      client_max_body_size 20M;
+  }
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ /index.html;
+  }
+  location /api/docs/ {
+    proxy_set_header Host $http_host;
+    root /usr/share/nginx/html;
+    try_files $uri $uri/redoc.html;
+  }
+  location /404.html {
+    root var/html/frontend/;
   }
 }
