--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,9 +16,9 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.7.0
 filetype==1.2.0
-flake8==6.0.0
-flake8-isort==6.0.0
+flake8==7.0.0
 idna==3.6
+inflection==0.5.1
 install==1.3.5
 isort==5.13.2
 itypes==1.2.0
@@ -29,13 +29,14 @@ oauthlib==3.2.2
 pep8==1.7.1
 pillow==10.2.0
 psycopg2-binary==2.9.3
-pycodestyle==2.10.0
+pycodestyle==2.11.1
 pycparser==2.21
-pyflakes==3.0.1
+pyflakes==3.2.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
 pytz==2024.1
+PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==1.4.0
