--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -5,8 +5,7 @@ server {
 
   location /api/docs/ {
     proxy_set_header Host $http_host;
-    root /usr/share/nginx/html;
-    try_files $uri $uri/redoc.html;
+    root /usr/share/nginx/html/redoc.html;
   }
   location /api/ {
     proxy_set_header Host $http_host;
