--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,6 +6,7 @@ server {
   location /api/docs/ {
     proxy_set_header Host $http_host;
     root /usr/share/nginx/html/redoc.html;
+    try_files $uri $uri/redoc.html;
   }
   location /api/ {
     proxy_set_header Host $http_host;
