--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,7 +4,7 @@ server {
   server_tokens off;
 
   location /api/docs/ {
-    root docs/redoc.html;
+    root usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
   location /api/ {
