--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,7 +13,8 @@ services:
       - pg_data_production:/var/lib/postgresql/data 
   backend: 
     image: gnyssyng/foodgram_backend 
-    env_file: .env
+    env_file: 
+      -  .env
     depends_on:
       - db
     volumes: 
@@ -26,12 +27,13 @@ services:
     volumes: 
       - static_volume:/frontend_static 
   infra: 
-    image: gnyssyng/foodgram_gateway 
+    image: gnyssyng/foodgram_gateway
     env_file: .env 
     depends_on:
       - db
     volumes: 
       - static_volume:/staticfiles/
       - media:/media/
+      - ./docs/:/usr/share/nginx/html/api/docs/
     ports: 
       - 9000:80
