--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,6 +7,12 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
   }
+
+  location /api/docs/ {
+      root /usr/share/nginx/html;
+      try_files $uri $uri/redoc.html;
+  }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
