--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,7 +12,8 @@ services:
     volumes: 
       - pg_data_production:/var/lib/postgresql/data 
   backend: 
-    image: gnyssyng/foodgram_backend 
+    #image: gnyssyng/foodgram_backend 
+    build: ./backend
     env_file: 
       -  .env
     depends_on:
@@ -27,7 +28,8 @@ services:
     volumes: 
       - static_volume:/frontend_static 
   infra: 
-    image: gnyssyng/foodgram_gateway
+    #image: gnyssyng/foodgram_gateway
+    build: ./infra
     env_file: .env 
     depends_on:
       - db
